# Build occoder library (liboccoder.so) - depends on libocsqlite, libocfiles

# Dependencies for occoder library
valac = meson.get_compiler('vala')
occoder_deps = [
  dependency('gtk4'),
  dependency('gtksourceview-5'),
  dependency('gee-0.8'),
  dependency('gio-2.0'),
  dependency('glib-2.0'),
  dependency('gobject-2.0'),
  dependency('json-glib-1.0'),
  dependency('libsoup-3.0'),  # Required for ollmchat (Soup.Message, Soup.Session)
  dependency('sqlite3'),
  dependency('libgit2-glib-1.0'),
  valac.find_library('posix'),
]

occoder_src = files([
  'BufferProvider.vala',
  # TODO: Clipboard feature needs proper design - see TODO.md
  # 'ClipboardMetadata.vala',
  'GitProvider.vala',
  'GtkSourceFileBuffer.vala',  # Must come before SourceView.vala (SourceView uses GtkSourceFileBuffer)
  'SearchableDropdown.vala',
  'ProjectDropdown.vala',
  'FileDropdown.vala',
  'SourceView.vala',
  'AgentFactory.vala',  # Must come after SourceView (AgentFactory uses SourceView)
  'Agent.vala',  # Must come after AgentFactory (Agent uses AgentFactory)
  'List/SortedList.vala',  # Must come before Approvals (Approvals uses SortedList)
  'Approvals.vala',
])

# Build rpath for libraries to find each other in build directory
lib_build_rpath = ':'.join([
  meson.current_build_dir(),
  meson.current_build_dir() / '..' / 'libocsqlite',
  meson.current_build_dir() / '..' / 'libocfiles',
  meson.current_build_dir() / '..' / 'libocmarkdown',
  meson.current_build_dir() / '..' / 'libocmarkdowngtk',
  meson.current_build_dir() / '..' / 'libollmchat',
  meson.current_build_dir() / '..' / 'libollmchatgtk',
  meson.current_build_dir() / '..' / 'libocvector',
  meson.current_build_dir() / '..' / 'liboctools'
])

occoder_base_lib = library('occoder',
  dependencies: [occoder_deps, ocsqlite_vapi_dep, ocfiles_vapi_dep, ollmchat_vapi_dep, ocvector_vapi_dep],
  sources: occoder_src,
  vala_header: 'occoder.h',
  vala_vapi: 'occoder-meson.vapi',  # Use different name so our custom_target can use 'occoder.vapi'
  build_rpath: lib_build_rpath,
  include_directories: [
    include_directories('..' / 'libollmchat'),  # For C headers (build directory) - needed for Agent.Factory
    include_directories('..' / 'libocvector'),   # For C headers (build directory)
    include_directories('..' / 'libocfiles')     # For C headers (build directory)
  ],
  vala_args: [
    '--pkg=sqlite3',
    '--pkg=ocsqlite',
    '--pkg=json-glib-1.0',
    '--pkg=libsoup-3.0',  # Required for ollmchat.vapi (Soup.Message, Soup.Session)
    '--pkg=gmodule-2.0',  # Required for ocfiles (TreeBase uses GModule)
    '--pkg=tree-sitter',  # Required for ocfiles (TreeBase uses TreeSitter)
    '--pkg=fiass',  # Required for ocvector.vapi (Faiss.IDSelector)
    '--pkg=gtk4',
    '--pkg=gtksourceview-5',
    '--pkg=libgit2-glib-1.0',
    '--pkg=ocfiles',
    '--pkg=ollmchat',
    '--pkg=ocvector',
    # Put build directories FIRST so we use local VAPIs instead of installed ones
    '--vapidir', meson.current_build_dir() / '..' / 'libollmchat',
    '--vapidir', meson.current_build_dir() / '..' / 'liboctools',
    '--vapidir', meson.current_build_dir() / '..' / 'libocvector',
    '--vapidir', meson.current_build_dir() / '..' / 'libocsqlite',
    '--vapidir', meson.current_build_dir() / '..' / 'libocfiles',
    '--vapidir', '/usr/share/vala/vapi'  # System VAPI directory for libgit2-glib-1.0 (last, so local takes priority)
  ],
  install: true
)

# Manually generate occoder.vapi with correct command line order
occoder_vapi = custom_target('occoder-vapi',
  output: 'occoder.vapi',
  input: occoder_src,
  command: [
    valac_exe,
    '-C', '--debug',
    '--target-glib=auto',
    # Put build directories FIRST so we use local VAPIs instead of installed ones
    '--vapidir', meson.current_source_dir() / '../vapi',  # Source VAPIs first (fiass.vapi, tree-sitter.vapi)
    '--vapidir', meson.current_source_dir() / '../../vapi',
    '--vapidir', meson.current_build_dir() / '..' / 'libocsqlite',
    '--vapidir', meson.current_build_dir() / '..' / 'libocfiles',
    '--vapidir', meson.current_build_dir() / '..' / 'libollmchat',  # ollmchat.vapi must be built first (generated by library)
    '--vapidir', meson.current_build_dir() / '..' / 'libocvector',  # ocvector.vapi must be built first
    '--vapidir', meson.current_build_dir(),
    '--vapidir', '/usr/share/vala/vapi',  # System VAPI directory for libgit2-glib-1.0 (last, so local takes priority)
    '--pkg', 'posix',
    '--pkg', 'sqlite3',
    '--pkg', 'ocsqlite',
    '--pkg', 'gmodule-2.0',  # Required for ocfiles (TreeBase uses GModule)
    '--pkg', 'tree-sitter',  # Required for ocfiles (TreeBase uses TreeSitter)
    '--pkg', 'ocfiles',
    '--pkg', 'libsoup-3.0',  # Required for ollmchat.vapi (Soup.Message, Soup.Session)
    '--pkg', 'ollmchat',
    '--pkg', 'fiass',  # Required for ocvector.vapi (Faiss.IDSelector)
    '--pkg', 'ocvector',
    '--pkg', 'gtk4',  # Required for Tool namespace
    '--pkg', 'gtksourceview-5',
    '--pkg', 'gobject-2.0',
    '--pkg', 'glib-2.0',
    '--pkg', 'gio-2.0',
    '--pkg', 'json-glib-1.0',
    '--pkg', 'gee-0.8',
    '--pkg', 'gtk4',
    '--pkg', 'gtksourceview-5',
    '--pkg', 'libgit2-glib-1.0',
    '--library', 'occoder',
    '--header', meson.current_build_dir() / 'occoder.h',  # Use header from library
    '--vapi', '@OUTPUT@',
    '@INPUT@'
  ],
  depends: [occoder_base_lib, ocfiles_vapi, ollmchat_base_lib, ocvector_vapi],
  build_by_default: true,
  install: true,
  install_dir: get_option('datadir') / 'vala' / 'vapi'
)

# GObject Introspection for occoder library
occoder_gir = gnome.generate_gir(occoder_base_lib,
  namespace: 'OLLMcoder',
  nsversion: '1.0',
  identifier_prefix: 'OLLMcoder',
  symbol_prefix: 'ollmcoder',
  link_with: [ocsqlite_base_lib, ocfiles_base_lib, ollmchat_base_lib],
  dependencies: [dependency('sqlite3')],
  extra_args: [
    '--extra-library=ocsqlite',
    '--extra-library=ocfiles',
    '--accept-unprefixed'
  ],
  includes: ['GObject-2.0', 'Gio-2.0', 'Gtk-4.0', ocsqlite_gir[0], ocfiles_gir[0]],  # Temporarily removed ollmchat_gir - only needed for CodebaseSearchTool
  install: true,
  fatal_warnings: false
)

# Create dependency for other libraries to use
# Use link_args instead of link_with to prevent meson from auto-including occoder-meson.vapi
occoder_vapi_dep = declare_dependency(
  link_args: ['-L' + meson.current_build_dir(), '-loccoder'],
  sources: [occoder_vapi[0]],  # Include VAPI file to ensure it's built first
  dependencies: [ocsqlite_vapi_dep, ocfiles_vapi_dep]  # Temporarily removed ocvector_vapi_dep, ollmchat_vapi_dep - only needed for CodebaseSearchTool
)
